# lune-editor

./: .gitattributes  .gitignore  .tachyonfx-src  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Scripts.toml  deny.toml  lefthook.yml
.github/workflows/: ci.yml  release.yml
crates/lune-ai/: Cargo.toml
crates/lune-ai/src/: lib.rs  live_mode.rs  manager.rs  port_adapter.rs  pty.rs  session.rs
crates/lune-ai/src/context/: mod.rs
crates/lune-ai/src/runtime/: manager.rs  pty.rs  session.rs
crates/lune-core/: Cargo.toml
crates/lune-core/src/: buffer.rs  diff.rs  highlight.rs  language.rs  lib.rs  position.rs  recovery.rs  registry.rs  search.rs  settings.rs  state_db.rs  undo.rs  workspace.rs  workspace_state.rs
crates/lune-core/src/editor/: buffer.rs  diff.rs  mod.rs  position.rs  registry.rs  search.rs  undo.rs
crates/lune-core/src/ports/: ai.rs  git.rs  json_persistence.rs  mod.rs  persistence.rs  runtime.rs  snapshot.rs
crates/lune-core/src/project/: config.rs  kv_store.rs  mod.rs  recovery.rs  search.rs  settings.rs  state_db.rs  watcher.rs  workspace.rs  workspace_state.rs
crates/lune-core/src/session/: mod.rs
crates/lune-core/src/syntax/: highlight.rs  mod.rs
crates/lune-core/tests/: persistence_pipeline.rs  prop_buffer.rs  prop_diff.rs  prop_search.rs  prop_settings.rs
crates/lune-git/: Cargo.toml
crates/lune-git/src/: diff.rs  gutter.rs  lib.rs  port_adapter.rs  service.rs  staging.rs
crates/lune-git/src/status/: diff.rs  gutter.rs  mod.rs  staging.rs
crates/lune-git/tests/: port_adapter_integration.rs
crates/lune-ts-highlight/: Cargo.toml
crates/lune-ts-highlight/src/: lib.rs
crates/lune-ui/: Cargo.toml
crates/lune-ui/src/: app.rs  effects.rs  event.rs  focus.rs  keybindings.rs  layout.rs  lib.rs  primitives.rs  theme.rs  theme_config.rs  vim.rs
crates/lune-ui/src/base/: primitives.rs
crates/lune-ui/src/highlight/: mod.rs  regex_hl.rs  theme.rs  tree_sitter.rs
crates/lune-ui/src/runtime/: agents.rs  app.rs  effects.rs  event.rs  keybindings.rs  layout.rs  mod.rs  terminal_layouts.rs  tiling.rs  vim.rs
crates/lune-ui/src/runtime/app/: agent_layouts.rs  agent_tab.rs  ai_commands.rs  editor_actions.rs  editor_modes.rs  git_commands.rs  overlay_handlers.rs  ui_interaction.rs  ui_render.rs  welcome_nav.rs  workspace_commands.rs
crates/lune-ui/src/style/: color.rs  mod.rs  theme.rs  theme_config.rs
crates/lune-ui/src/style/theme/: builtin.rs
crates/lune-ui/src/style/theme_config/: compile.rs  registry.rs  schema.rs
crates/lune-ui/src/widgets/: confirm_dialog.rs  diff_view.rs  editor_pane.rs  file_tree.rs  git_panel.rs  mod.rs  modal.rs  overlay.rs  panel.rs  status_bar.rs  tab_bar.rs  terminal.rs
crates/lune-ui/src/widgets/overlay/: ai_client_picker.rs  command_palette.rs  file_picker.rs  find_replace.rs  image_preview.rs  input_dialog.rs  key_hints.rs  language_picker.rs  layout_picker.rs  markdown_preview.rs  notifications.rs  project_search.rs  theme_picker.rs  util.rs
crates/lune-ui/tests/: port_wiring.rs  snapshot_widgets.rs
crates/lune-ui/tests/snapshots/: snapshot_widgets__diff_view_empty.snap  snapshot_widgets__diff_view_side_by_side.snap  snapshot_widgets__diff_view_unified.snap  snapshot_widgets__editor_pane_insert_mode.snap  snapshot_widgets__editor_pane_welcome.snap  snapshot_widgets__editor_pane_with_content.snap  snapshot_widgets__file_tree_empty.snap  snapshot_widgets__file_tree_focused.snap  snapshot_widgets__file_tree_light_theme.snap  snapshot_widgets__file_tree_unfocused.snap  snapshot_widgets__git_panel_empty.snap  snapshot_widgets__git_panel_unfocused.snap  snapshot_widgets__git_panel_with_changes.snap  snapshot_widgets__overlay_command_palette.snap  snapshot_widgets__overlay_command_palette_filtered.snap  snapshot_widgets__overlay_confirm_dialog.snap  snapshot_widgets__overlay_image_failed.snap  snapshot_widgets__overlay_image_loading.snap  snapshot_widgets__overlay_inactive.snap  snapshot_widgets__overlay_key_hints.snap  snapshot_widgets__overlay_key_hints_filtered.snap  snapshot_widgets__overlay_markdown_preview.snap  snapshot_widgets__overlay_project_search.snap  snapshot_widgets__status_bar_ai_busy.snap  snapshot_widgets__status_bar_empty_state.snap  snapshot_widgets__status_bar_insert_dirty.snap  snapshot_widgets__status_bar_light_theme.snap  snapshot_widgets__status_bar_live_mode.snap  snapshot_widgets__status_bar_normal.snap  snapshot_widgets__status_bar_with_message.snap  snapshot_widgets__tab_bar_empty.snap  snapshot_widgets__tab_bar_multiple_tabs.snap  snapshot_widgets__tab_bar_single_active.snap  snapshot_widgets__tab_bar_unfocused.snap
docs/: README.md  SDD.md  TESTING.md  architecture.md  configuration.md  keybindings.md  theming.md
docs/guides/: testing.md
docs/plans/SDD/: 00-index.md  01-project-scaffold.md  02-editor-core.md  04-ui-layout.md  05-file-tree.md  06-syntax-highlighting.md  07-git-integration.md  08-ai-integration.md  09-live-mode.md  10-effects.md  11-persistence.md  12-testing.md
docs/plans/sdd/: 00-index.md  03-event-system.md  05-file-tree.md  12-testing.md
docs/specs/: sdd.md
scripts/: headless_editor.sh
src/: main.rs
tests/: crash_recovery.rs  git_workflow.rs  open_edit_save.rs  settings_merge.rs  vim_editing.rs
tests/common/: mod.rs
