[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.90"

[workspace.dependencies]
# Internal crates
lune-core = { path = "crates/lune-core" }
lune-ui = { path = "crates/lune-ui" }
lune-ai = { path = "crates/lune-ai" }
lune-git = { path = "crates/lune-git" }

# TUI framework
ratatui = { version = "0.30", features = ["crossterm"] }
ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-crossterm = "0.1"
crossterm = "0.29"
rat-salsa = { version = "4", features = ["dialog_widgets", "async"] }
rat-widget = { version = "3", features = ["user_directories"] }
rat-event = "2"
rat-focus = "2"

# Editor core
ropey = "1"
uuid = { version = "1", features = ["v4"] }
similar = "2"

# Syntax highlighting (tree-sitter)
tree-sitter = "0.26"
lune-ts-highlight = { path = "crates/lune-ts-highlight" }
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-c = "0.24"
tree-sitter-go = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
regex = "1"
# Vendored tree-sitter-highlight (crates/lune-ts-highlight) dependency.
streaming-iterator = "0.1.9"

# File system
notify = "7"

# Git
git2 = "0.20"

# AI / PTY
portable-pty = "0.9"
vt100 = "0.16"

# Serialization / config
serde = { version = "1", features = ["derive", "rc"] }
toml = "0.8"
bincode = { version = "2", features = ["serde"] }
serde_json = "1"
base64 = "0.22"

# Clipboard
arboard = "3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging (rat-salsa uses `log`, so we use `log` for compat)
log = "0.4"

# Async
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util", "fs", "process"] }
crossbeam = "0.8"
arc-swap = "1"

# Testing
tempfile = "3"
proptest = "1"
insta = { version = "1", features = ["yaml"] }

# Hashing — FxHash for internal (non-DoS-risk) keys
rustc-hash = "2"

# Stack-allocated small collections
smallvec = "1.15"

# Activity indicator (spinner) widget for ratatui.
throbber-widgets-tui = "0.11"

# Markdown → ratatui Text renderer (AI responses, README preview).
tui-markdown = "0.3"

# Image rendering in terminal (sixel, kitty, iterm2, halfblocks fallback).
#
# `image-defaults` (the upstream default) forwards `image/default`, which
# turns on AV1 decoding via `ravif`/`rav1e` and a TIFF/HDR decoder — none
# of which a terminal image preview needs. We disable the feature here
# and declare `image` directly with only the formats we actually surface.
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }

# Image decoder crate, pinned with an explicit minimal feature set.
# Declared directly (rather than relying on ratatui-image's transitive
# pull) so this Cargo.toml is the single source of truth for which
# decoders ship in the binary; Cargo feature unification means
# `ratatui-image` sees the same enabled set.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }

# Color conversions (ANSI / RGB / HSL) for TUI theming
coolor = "1"

# Unicode text segmentation and display width.  Used by the editor pane
# for grapheme-correct cursor/selection placement and by the find/replace
# overlay for grapheme-aware backspace.
unicode-segmentation = "1"
unicode-width = "0.2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Common pedantic overrides
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# --- Binary crate (root) ---

[package]
name = "lune-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lune"
path = "src/main.rs"

[dependencies]
lune-core.workspace = true
lune-ui.workspace = true
lune-ai.workspace = true
lune-git.workspace = true
anyhow.workspace = true
log.workspace = true

[lints]
workspace = true

[dev-dependencies]
lune-core.workspace = true
lune-ui.workspace = true
lune-ai.workspace = true
lune-git.workspace = true
tempfile.workspace = true
git2.workspace = true

# ── Release profile (P2: max-speed) ────────────────────────────────────
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

# ── Dev profile (faster iteration) ─────────────────────────────────────
[profile.dev]
debug = "line-tables-only"

# Compile all dependencies at opt-level 3 even in dev — tree-sitter and ratatui
# are 10-30× faster when optimized; incremental builds are unaffected.
[profile.dev.package."*"]
opt-level = 3
