[package]
name = "lune-core"
description = "Core editor engine: buffer, rope, undo/redo, diff, search"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ropey.workspace = true
uuid.workspace = true
similar.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
bincode.workspace = true
log.workspace = true
notify.workspace = true
crossbeam.workspace = true
tokio.workspace = true
arc-swap.workspace = true
serde_json.workspace = true
base64.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
